add new img, fixes

--- a/index.html
+++ b/index.html
@@ -18,32 +18,40 @@
         <div class="app-grid">
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <img src="img/icons_app/icon.png" alt="Соц. Сети">
+              <picture>
+                <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
+                <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon.png" alt="Соц. Сети">
+              </picture>
               <span>Соц. Сети</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <img src="img/icons_app/icon-2.png" alt="Развлечения">
+              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-2@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-2.png" alt="Развлечения">
               <span>Развлечения</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <img src="img/icons_app/icon-3.png" alt="Стриминг">
+              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3.png" alt="Стриминг">
               <span>Стриминг</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <img src="img/icons_app/icon-4.png" alt="Новости">
+              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-4.png" alt="Новости">
               <span>Новости</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <img src="img/icons_app/icon-5.png" alt="Мессенджеры">
+              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-5.png" alt="Мессенджеры">
               <span>Мессенджеры</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <img src="img/icons_app/icon-6.png" alt="Другое">
+              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-6.png" alt="Другое">
               <span>Другое</span>
           </label>
         </div>
@@ -110,7 +118,7 @@
           <h3 class="edlock-slider__title">А сейчас посмотрим как работает EdLock</h3>
           
           <div class="final-step__img-wrapper">
-            <img src="img/final_screen_phone.png" alt="phone">
+            <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/final_screen_phone.png" alt="phone">
           
             <div class="final-step__img-gradient">
               <svg xmlns="http://www.w3.org/2000/svg" width="375" height="341" viewBox="0 0 375 341" fill="none">
