change css, html, img, add video

--- a/index.html
+++ b/index.html
@@ -18,40 +18,32 @@
         <div class="app-grid">
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <picture>
-                <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
-                <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon.png" alt="Соц. Сети">
-              </picture>
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon@2x.png" alt="Соц. Сети">
               <span>Соц. Сети</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-2@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
-              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-2.png" alt="Развлечения">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-2@2x.png" alt="Развлечения">
               <span>Развлечения</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
-              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3.png" alt="Стриминг">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" alt="Стриминг">
               <span>Стриминг</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
-              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-4.png" alt="Новости">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-4@2x.png" alt="Новости">
               <span>Новости</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
-              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-5.png" alt="Мессенджеры">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-5@2x.png" alt="Мессенджеры">
               <span>Мессенджеры</span>
           </label>
           <label class="app-item">
               <input type="checkbox" class="app-item__input">
-              <source srcset="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-3@2x.png" media="(max-width: 992px) and (-webkit-min-device-pixel-ratio: 2)">
-              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-6.png" alt="Другое">
+              <img src="https://cdn.jsdelivr.net/gh/genexys/edLock@master/img/icons_app/icon-6@2x.png" alt="Другое">
               <span>Другое</span>
           </label>
         </div>
@@ -147,18 +139,6 @@
           <span>
             Скачать EdLock
           </span>  
-        </a>
-
-        <a href="" class="select-button select-button--transparent">
-          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g id="icn_20_share">
-              <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M9.97836 2.21301C10.2665 1.929 10.7335 1.929 11.0216 2.21301L14.7102 5.84938C14.9983 6.13339 14.9983 6.59388 14.7102 6.8779C14.4221 7.16191 13.955 7.16191 13.6669 6.8779L11.2377 4.48306V13.0303C11.2377 13.432 10.9074 13.7576 10.5 13.7576C10.0926 13.7576 9.7623 13.432 9.7623 13.0303V4.48306L7.33311 6.8779C7.04502 7.16191 6.57793 7.16191 6.28984 6.8779C6.00175 6.59388 6.00175 6.13339 6.28984 5.84938L9.97836 2.21301ZM3.7377 10.4848C4.14513 10.4848 4.47541 10.8105 4.47541 11.2121V16.0606C4.47541 16.1892 4.52722 16.3125 4.61946 16.4034C4.71169 16.4944 4.83678 16.5455 4.96721 16.5455H16.0328C16.1632 16.5455 16.2883 16.4944 16.3805 16.4034C16.4728 16.3125 16.5246 16.1892 16.5246 16.0606V11.2121C16.5246 10.8105 16.8549 10.4848 17.2623 10.4848C17.6697 10.4848 18 10.8105 18 11.2121V16.0606C18 16.575 17.7927 17.0683 17.4238 17.432C17.0549 17.7957 16.5545 18 16.0328 18H4.96721C4.44548 18 3.94511 17.7957 3.57618 17.432C3.20726 17.0683 3 16.575 3 16.0606V11.2121C3 10.8105 3.33028 10.4848 3.7377 10.4848Z" fill="#414265"/>
-            </g>
-          </svg>
-            
-          <span>
-            Поделиться с другом
-          </span>
         </a>
       </div>
     </div>
